Bug 1820241 - Add proper mozlogging to JOG module r=TravisLong

FOG's various modules (including jog) haven't taken full advantage of MOZ_LOG.
Time to use a weird "artifact builds aren't working in FOG" problem as an
excuse to get it done.

Also, while I'm here, was getting weird debug-only crashes because of `emplace`
on a `None`. Not at all the behaviour I expected from mozilla::Maybe, but the
fixed syntax is even more expressive, so I'm all for it.

Differential Revision: https://phabricator.services.mozilla.com/D171772